2010-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Don't try to handle remote reparse
	points as symlinks.  Explain why.

2010-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* include/inttypes.h: Change PTR definitions to int to align with the
	stdint.h type definitions of intptr_t/uintptr_t.

2010-05-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (class fhandler_pty_master): Add master_thread member.
	* fhandler_tty.cc (fhandler_pty_master::close): Properly detach from
	master thread.
	(fhandler_pty_master::setup): Store cygthread pointer of pty master
	control thread in master_thread.  Don't zap thread handle.

2010-05-26  Kazuhiro Fujieda  <fujieda@acm.org>
	    Corinna Vinschen  <corinna@vinschen.de>

	* nlsfuncs.cc (__set_lc_time_from_win): Use LOCALE_SMONTHNAME1
	instead of LOCALE_SABBREVMONTHNAME1 in Japanese and Korean
	locales to get abbreviated month names.  Explain why.

2010-05-18  Kazuhiro Fujieda  <fujieda@acm.org>

	* environ.cc (regopt): Change the first argument to wide char string.
	(environ_init): Accommodate change to the first argument of regopt.
	* exception.cc (open_stackdumpfile): Accommodate change to the type of
	progname in _pinfo.
	* external.cc (fillout_pinfo): Ditto.
	* fhandler_process.cc (format_process_winexename): Ditto.
	(format_process_stat): Ditto.
	* fork.cc (fork::parent): Ditto.
	* pinfo.cc (pinfo_basic::pinfo_basic): Call GetModuleFileNameW instead
	of GetModuleFileName.
	(pinfo::thisproc): Accommodate change to the type of progname in
	_pinfo.
	(pinfo_init): Ditto.
	* pinfo.h (_pinfo): Change the type of progname to a wide char array.
	* registry.h (reg_key::get_int): Change the first argument from
	constant point to pointer to constant.
	(reg_key::get_string): Ditto.  Change the last argument likewise.
	* registry.cc (reg_key::get_int): Accommodate change to the
	declaration.
	(reg_key::get_string): Ditto.