@@ -1,3 +1,12 @@
+2010-05-26  Christopher Faylor  <me+cygwin@cgf.cx>
+
+	* hires.h (hires_base::reset): New function.
+	(hires_us): Specify that hires_base is a public import.
+	(hires_ms): Ditto.
+	* times.cc (gtod): Move earlier in file.
+	(settimeofday): Reset gtod so that base will be subsequently
+	recalculated.
+
 2010-05-26  Corinna Vinschen  <corinna@vinschen.de>
 
 	* path.cc (symlink_info::check): Don't try to handle remote reparse
